--- a/.github/workflows/continuous-integration-static-workflow.yml
+++ b/.github/workflows/continuous-integration-static-workflow.yml
@@ -21,7 +21,7 @@ jobs:
           npm ci
           npm run release        
         
-      - name: Deploy 🚀
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
